set cmake_min_version as 3.1 and set cmake_cxx_standard

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 # CMakeLists.txt
 
-cmake_minimum_required(VERSION 2.8)
-set(CMAKE_CXX_FLAGS "-std=c++14 -O2 -Wall -Wextra -Wc++14-compat")
+cmake_minimum_required(VERSION 3.1)
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_FLAGS "-O2 -Wall -Wextra -Wc++14-compat")
 
 add_executable(main main.cpp)
