--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,15 @@
 # CMakeLists.txt
 
-cmake_minimum_required(VERSION 2.8)
-set(CMAKE_CXX_FLAGS "-std=c++14 -O2 -Wall -Wextra -Wc++14-compat -pedantic")
+cmake_minimum_required(VERSION 3.1)
+
+if (CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE Release)
+endif()
+
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wc++14-compat")
+set(CMAKE_CXX_FLAGS_DEBUG "-g")
+set(CMAKE_CXX_FLAGS_RELEASE "-O2")
+
+include_directories(${PROJECT_SOURCE_DIR}/include)
 add_executable(main main.cpp)
