--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,27 +1,14 @@
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558 
-    // for the documentation about the tasks.json format
     "version": "2.0.0",
     "tasks": [
         {
+            "label": "Build Main",
             "type": "shell",
-            "label": "clang++ build active file",
-            "command": "/usr/bin/clang++",
-            "args": [
-                "-Wall",
-                "-Wextra",
-                "-O2",
-                "-std=c++14",
-                "${file}",
-                "-o",
-                "${fileDirname}/${fileBasenameNoExtension}"
-            ],
-            "options": {
-                "cwd": "/usr/bin"
-            },
-            "problemMatcher": [
-                "$gcc"
-            ]
+            "command": "clang++ -g main.cpp -o main.out",
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         }
     ]
 }
