--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,3 @@
 {
-  "C_Cpp.default.cppStandard": "c++14",
-  "C_Cpp.default.cStandard": "c11",
-  "C_Cpp.default.intelliSenseMode": "clang-x64"
+  "C_Cpp.clang_format_path": "/usr/bin/clang-format"
 }
