--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,10 +4,24 @@
         {
             "label": "Build Main",
             "type": "shell",
-            "command": "clang++ -g main.cpp -o main.out",
+            "command": "clang++ -std=gnu++14 -g main.cpp -o main",
             "group": {
                 "kind": "build",
                 "isDefault": true
+            }
+        },
+        {
+            "type": "shell",
+            "label": "clang++ build active file",
+            "command": "/usr/bin/clang++",
+            "args": [
+                "-g",
+                "${file}",
+                "-o",
+                "${fileDirname}/${fileBasenameNoExtension}"
+            ],
+            "options": {
+                "cwd": "/usr/bin"
             }
         }
     ]
