--- a/d/.gitignore
+++ b/d/.gitignore
@@ -1,3 +1,12 @@
-# .gitignore
+# a/.gitignore
 
+# C/C++
 main
+
+# CMake
+CMakeCache.txt
+CMakeFiles/
+Makefile
+cmake_install.cmake
+compile_commands.json
+
