--- a/a/.gitignore
+++ b/a/.gitignore
@@ -1,12 +1,4 @@
-# a/.gitignore
+# .gitignore
 
-# C/C++
 main
-
-# CMake
-CMakeCache.txt
-CMakeFiles/
-Makefile
-cmake_install.cmake
 compile_commands.json
-
