--- a/a/Makefile
+++ b/a/Makefile
@@ -1,11 +1,8 @@
 CXX := clang++
-CXX := $(if $(shell which clang++), clang++, g++)
 CXXFLAGS := -std=gnu++14 -O2 -Wall -Wextra
 LDFLAGS := -lc -lstdc++
-TARGET := main
-SRCS := main.cpp
 
-all: $(TARGET)
+all: main
 
 clean:
-	$(RM) $(TARGET)
+	$(RM) compile_commands.json main
