--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -10,13 +10,13 @@ RUN apt-get update \
 
 # Install git, process tools, lsb-release (common in install instructions for CLIs)
 RUN apt-get update \
- && apt-get -y install git procps lsb-release \
+ && apt-get -y install bash-completion git procps lsb-release \
  && apt-get -y clean \
  && rm -rf /var/lib/apt/lists/*
 
 # Install C++ tools
 RUN apt-get update \
- && apt-get -y install --no-install-recommends clang clang-format lldb \
+ && apt-get -y install --no-install-recommends make cmake clang clang-format lldb \
  && apt-get -y clean \
  && rm -rf /var/lib/apt/lists/*
 
