--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,4 +10,7 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_FLAGS "-Wall -Wextra")
 set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")
 set(CMAKE_CXX_FLAGS_RELEASE "-O2")
-add_executable(main main.cpp)
+add_executable(a a.cpp)
+add_executable(b b.cpp)
+add_executable(c c.cpp)
+add_executable(d d.cpp)
