--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,13 +5,15 @@
         // Uncomment the next line to use a non-root user. On Linux, this will prevent
         // new files getting created as root, but you may need to update the USER_UID
         // and USER_GID in .devcontainer/Dockerfile to match your user if not 1000.
-        "-u", "vscode",
+        "-u",
+        "vscode",
         "--cap-add=SYS_PTRACE",
         "--security-opt",
         "seccomp=unconfined"
     ],
     "settings": {
-        "terminal.integrated.shell.linux": "/bin/bash"
+        "terminal.integrated.shell.linux": "/bin/bash",
+        "C_Cpp.clang_format_path": "/usr/bin/clang-format"
     },
     // Uncomment the next line if you want to publish any ports.
     // "appPort": [],
