--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
-  "C_Cpp.clang_format_path": "/usr/bin/clang-format",
-  "C_Cpp.clang_format_style": "LLVM",
+  "C_Cpp.autoAddFileAssociations": false,
   "C_Cpp.default.cppStandard": "c++14",
+  "C_Cpp.clang_format_style": "file",
+  "C_Cpp.clang_format_fallbackStyle": "LLVM"
 }
