CMakeLists.txt: target is now [a-f]

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,9 +14,9 @@ set(CMAKE_CXX_FLAGS "-Wall -Wextra")
 set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")
 set(CMAKE_CXX_FLAGS_RELEASE "-O2")
 
-add_executable(a.out a.cpp)
-add_executable(b.out b.cpp)
-add_executable(c.out c.cpp)
-add_executable(d.out d.cpp)
-add_executable(e.out e.cpp)
-add_executable(f.out f.cpp)
+add_executable(a a.cpp)
+add_executable(b b.cpp)
+add_executable(c c.cpp)
+add_executable(d d.cpp)
+add_executable(e e.cpp)
+add_executable(f f.cpp)
