--- a/abc/CMakeLists.txt
+++ b/abc/CMakeLists.txt
@@ -16,10 +16,9 @@ set(CMAKE_CXX_FLAGS_RELEASE "-O2")
 
 include_directories(../include)
 
-add_executable(main main.cpp)
-# add_executable(a a.cpp)
-# add_executable(b b.cpp)
-# add_executable(c c.cpp)
-# add_executable(d d.cpp)
-# add_executable(e e.cpp)
-# add_executable(f f.cpp)
+add_executable(a a.cpp)
+add_executable(b b.cpp)
+add_executable(c c.cpp)
+add_executable(d d.cpp)
+add_executable(e e.cpp)
+add_executable(f f.cpp)
